#

lib_LTLIBRARIES = libaltk.la

libaltk_la_CPPFLAGS = -I$(top_srcdir)

libaltk_la_CFLAGS = @AL5_CFLAGS@

libaltk_la_SOURCES = \
	altkbase.cpp \
	altkobject.cpp \
	altkdisplay.cpp \
	altkmainloop.cpp \
	altkwidget.cpp \
	altkcontainer.cpp \
	altkbin.cpp \
	altkwindow.cpp

include_HEADERS = \
	altk.hpp

pkginclude_HEADERS = \
	altkbase.hpp \
	altkobject.hpp \
	altkdisplay.hpp \
	altkmainloop.hpp \
	altkwidget.hpp \
	altkcontainer.hpp \
	altkbin.hpp \
	altkwindow.hpp
